deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  argo-rollouts-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-v1
  namespace: argo-rollouts-demo
spec:
  selector:
    matchLabels:
      app: users
      version: v1
  replicas: 1
  template:
    metadata:
      namespace: argo-rollouts-demo
      labels:
        app: users
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: elfgzp/istio-echo-demo:latest
        ports:
        - containerPort: 8088
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-v2
  namespace: argo-rollouts-demo
spec:
  selector:
    matchLabels:
      app: users
      version: v2
  replicas: 1
  template:
    metadata:
      namespace: argo-rollouts-demo
      labels:
        app: users
        version: v2
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: elfgzp/istio-echo-demo:latest
        ports:
        - containerPort: 8088
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: argo-rollouts-demo
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
  - name: http
    port: 80
    targetPort: 8088
