virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: users
  namespace: argo-rollouts-demo
spec:
  host: users
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users
  namespace: argo-rollouts-demo
spec:
  hosts:
    - users
  http:
  - name: traffic-default
    route:
      - destination:
          host: users
          subset: v1
        weight: 100
      - destination:
          host: users
          subset: v2
        weight: 0
